HtmlUi: HtmlField: Correctly react to "scrollBarEnabled" property change

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/htmlfield/HtmlField.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/htmlfield/HtmlField.css
@@ -11,4 +11,5 @@
 .html-field > .field {
   margin-left: @mandatory-indicator-width;
   #scout.user-select(text);
+  overflow: hidden;
 }
